Fixed updates tab looking strange