@@ -29,13 +29,13 @@
 </script>
 
 <Dialog.Root open={true} onOpenChangeComplete={onClose}>
-    <Dialog.Content class="w-auto h-auto flex flex-col {options.className}" style={options.style}
+    <Dialog.Content class="w-auto h-auto flex flex-col {options.className}" style={options.style} preflight={false}
         interactOutsideBehavior={options.closeOnBackgroundClick === false ? "ignore" : "close"}>
         {#if options.title}
             <Dialog.Header class="text-2xl font-bold!">{options.title}</Dialog.Header>
         {/if}
         <div class="grow" use:mountContent></div>
-        <Dialog.Footer>
+        <Dialog.Footer class="preflight">
             {#each options.buttons ?? [] as button}
                 <Button variant={button.style === "close"
                     ? "secondary": button.style === "danger"
