@@ -1,1 +1,2 @@
 Fixed updates tab looking strange
+Fixed modals for certain plugins looking strange
